# storage/api-docs/api-docs.json
@@ -233,8 +233,8 @@
                 "tags": [
                     "Menus"
                 ],
-                "summary": "Save a menu",
-                "operationId": "SaveMenu",
+                "summary": "Update a menu",
+                "operationId": "UpdateMenu",
                 "parameters": [
                     {
                         "name": "menuId",
